-(gateway, ticket-pembayaran): integrasi SSO JWT, audit SOAP, RabbitMQ, dan pengaturan routing API gateway
-pengimplementasikan nginx untuk API Gateway untuk mengatur routing antar mini service.

-Penambahan firebase/php-jwt.

 -konfigurasi Docker disatukan ke Port 80 agar mini service 1 port
